pkg/kubernetes/cilium/testdata/ciliumbgpadvertisement.yaml
apiVersion: cilium.io/v2
kind: CiliumBGPAdvertisement
metadata:
  name: pod-cidr-advert
spec:
  advertisements:
    - advertisementType: PodCIDR
