pkg/kubernetes/cilium/testdata/ciliumbgpclusterconfig.yaml
apiVersion: cilium.io/v2
kind: CiliumBGPClusterConfig
metadata:
  name: default-bgp
spec:
  bgpInstances:
    - name: instance-65000
  nodeSelector:
    matchLabels:
      bgp: enabled
