pkg/kubernetes/cilium/testdata/ciliumbgpnodeconfig.yaml
apiVersion: cilium.io/v2
kind: CiliumBGPNodeConfig
metadata:
  name: node-worker-1
spec:
  bgpInstances:
    - name: instance-65000
