pkg/kubernetes/cilium/testdata/ciliumbgppeerconfig.yaml
apiVersion: cilium.io/v2
kind: CiliumBGPPeerConfig
metadata:
  name: peer-65001
spec:
  ebgpMultihop: 2
  families:
    - afi: ipv4
      safi: unicast
