pkg/kubernetes/cilium/testdata/ciliumclusterwidenetworkpolicy-spec.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-health-checks
spec:
  ingress:
    - fromEntities:
        - host
  nodeSelector: {}
