pkg/kubernetes/cilium/testdata/ciliumclusterwidenetworkpolicy-specs.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: multi-rule
specs:
  - description: r1
    ingress:
      - fromEntities:
          - host
    nodeSelector: {}
