pkg/kubernetes/cilium/testdata/ciliumegressgatewaypolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumEgressGatewayPolicy
metadata:
  name: prod-egress
spec:
  destinationCIDRs:
    - 0.0.0.0/0
  egressGateway:
    interface: eth0
    nodeSelector:
      matchLabels:
        node-role.kubernetes.io/egress: ""
  excludedCIDRs:
    - 10.0.0.0/8
  selectors:
    - podSelector:
        matchLabels:
          app: crawler
