pkg/kubernetes/cilium/testdata/ciliumloadbalancerippool.yaml
apiVersion: cilium.io/v2
kind: CiliumLoadBalancerIPPool
metadata:
  name: public-pool
spec:
  blocks:
    - cidr: 203.0.113.0/24
  serviceSelector:
    matchLabels:
      svc: lb
