pkg/kubernetes/cilium/testdata/ciliumnetworkpolicy-spec.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-internal
  namespace: default
spec:
  description: allow traffic from the same namespace
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
