pkg/kubernetes/cilium/testdata/ciliumnetworkpolicy-specs.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: multi-rule
  namespace: default
specs:
  - description: r1
    endpointSelector: {}
    ingress:
      - fromEndpoints:
          - {}
  - description: r2
    egress:
      - toEntities:
          - world
    endpointSelector: {}
